Adicionada click como dependencia

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,26 @@
 [tool.poetry]
 name = "kt-otm"
 version = "0.1.0"
-description = ""
+description = "Calcula os strikes fora do dinheiro"
 authors = ["Valmir Franca <vfranca3@gmail.com>"]
+license = "GPL-2.0-only"
+readme = "README.md"
+repository = "https://github.com/vfranca/kt-otm"
+keywords = ["opções", "derivativos", "cli", "trading", "bolsa de valores"]
+classifiers = [
+"Development Status :: 2 - Pre-Alpha",
+"Environment :: Console",
+"Intended Audience :: Financial and Insurance Industry",
+"License :: OSI Approved :: GNU General Public License (GPL)",
+"Natural Language :: Portuguese (Brazilian)",
+"Programming Language :: Python :: 3.9",
+"Topic :: Adaptive Technologies",
+"Topic :: Office/Business :: Financial :: Investment"
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -14,3 +29,6 @@ black = "^20.8b1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+otm = "kt_otm.cli:cli"
